--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "recoil": "^0.7.7",
     "typescript": "4.9.5"
   },
   "devDependencies": {
