--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev-turbo": "next dev --turbo",
     "dev": "next dev",
-    "dev:local" : "env-cmd -f .env.local next dev",
+    "dev:local": "env-cmd -f .env.local next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,8 +25,10 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.5",
     "react-query": "^3.39.3",
     "recoil": "^0.7.7",
+    "remark-gfm": "^3.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
